src/objects/APTS_Stage_MSPA__c.object
<CustomObject>
    <description>Staging Object for Agreement</description>
    <fields>
        <fullName>APTS_ChannelSetValue_Code__c</fullName>
        <label>ChannelSetValue (Code)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Created_On__c</fullName>
        <label>Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Date_Diff_Valid_From_And_To__c</fullName>
        <formula>APTS_Valid_To_SPA__c - APTS_Valid_From_SPA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Diff Valid From And To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Direct_Customer__c</fullName>
        <label>Direct Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Type__c</fullName>
        <label>Discount Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Discount__c</fullName>
        <label>Discount (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_DistributionChannel_SPA__c</fullName>
        <label>DistributionChannel (SPA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Description__c</fullName>
        <label>Error Description</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Final_Indirect_Customer_SPA__c</fullName>
        <label>Final (Indirect) Customer (SPA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Incoterms_methods_Code__c</fullName>
        <label>Incoterms methods (Code)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LBU__c</fullName>
        <label>LBU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Max_Order_Amount_SPA__c</fullName>
        <label>Max Order Amount (SPA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price_Base__c</fullName>
        <label>Net Price (Base)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_New_Apply_Reason__c</fullName>
        <label>Apply Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Notes_SPA__c</fullName>
        <label>Notes (SPA)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Operational_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSPA</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Stage MSPA</relationshipLabel>
        <relationshipName>Stage_MSPA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Opportunity__c</fullName>
        <label>Opportunity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Originated_Form_SPA__c</fullName>
        <label>Originated Form (SPA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Owner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Payment_Terms_SPA__c</fullName>
        <label>Payment Terms (SPA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Price1_Base__c</fullName>
        <label>Price1 (Base)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Base__c</fullName>
        <label>Price (Base)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Date_SPA__c</fullName>
        <label>Price Date (SPA)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Unit_UOM__c</fullName>
        <label>Price Unit UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Unit__c</fullName>
        <label>Price Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Code2__c</fullName>
        <label>Product Code2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_ResidualAmount_SPA__c</fullName>
        <label>ResidualAmount (SPA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_RowStatus__c</fullName>
        <label>RowStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Customer_ID__c</fullName>
        <label>SAP Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Division_SPA__c</fullName>
        <label>SAP Division (SPA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SPA_Identifier_SPA__c</fullName>
        <label>SPA Identifier (SPA)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_SPA_Rule_Header__c</fullName>
        <label>SPA Rule Header</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SPA_Status_SPA__c</fullName>
        <label>SPA Status (SPA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SPA_Type_SPA__c</fullName>
        <label>SPA Type (SPA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Office_SPA__c</fullName>
        <label>Sales Office (SPA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Organization_SPA__c</fullName>
        <label>Sales Organization (SPA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Person_SPA__c</fullName>
        <label>Sales Person (SPA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Valid_From_SPA__c</fullName>
        <label>Valid From (SPA)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Valid_To_SPA__c</fullName>
        <label>Valid To (SPA)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPA_Line_Item__c</fullName>
        <description>This is a REQUIRED field and will contain the Sequence number of the MSPA Line Item.</description>
        <label>SPA Line Item</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Stage MSPA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_RowStatus__c</columns>
        <columns>APTS_Error_Description__c</columns>
        <columns>APTS_Max_Order_Amount_SPA__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>MSPA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stage MSPA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>